peac_dev/force-app/main/default/objects/Doc_Fee_Schedule__c/Doc_Fee_Schedule__c.object-meta.xml
<CustomObject>
    <label>Doc Fee Schedule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Doc Fee Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Fee Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>