peac_dev/force-app/main/default/objects/Doc_Fee_Schedule__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The approver for this channel.</description>
    <inlineHelpText>The approver for this channel.</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Doc_Fee_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>