peac_dev/force-app/main/default/objects/Doc_Fee_Schedule__c/fields/Documentation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Fee__c</fullName>
    <label>Documentation Fee (Standard)</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>