peac_dev/force-app/main/default/objects/Doc_Fee_Schedule__c/fields/Documuntation_Fee_DG__c.field-meta.xml
<CustomField>
    <fullName>Documuntation_Fee_DG__c</fullName>
    <description>If Funding Type==&apos;Delivery Guarantee&apos; or &apos;Pre-Delivery&apos; then use this fee instead of regular fee</description>
    <inlineHelpText>If Funding Type==&apos;Delivery Guarantee&apos; or &apos;Pre-Delivery&apos; then use this fee instead of regular fee</inlineHelpText>
    <label>Documuntation Fee (DG)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>