peac_dev/force-app/main/default/objects/Doc_Fee_Schedule__c/fields/Pre_Delivery_Install_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pre_Delivery_Install_Fee__c</fullName>
    <label>Pre-Delivery/Install Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>