peac_dev/force-app/main/default/objects/Doc_Fee_Schedule__c/fields/Range_High__c.field-meta.xml
<CustomField>
    <fullName>Range_High__c</fullName>
    <inlineHelpText>Upper Range</inlineHelpText>
    <label>Range High</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>