peac_dev/force-app/main/default/objects/Doc_Fee_Schedule__c/fields/Range_Low__c.field-meta.xml
<CustomField>
    <fullName>Range_Low__c</fullName>
    <inlineHelpText>Low Range of Doc Fee, leave blank if not ranged.</inlineHelpText>
    <label>Range_Low</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>