peac_dev/force-app/main/default/objects/Doc_Fee_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Documentation_Fee__c</columns>
    <columns>Range_High__c</columns>
    <columns>Range_Low__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>